{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 123,
  "lineage": "15aeb60b-f75b-9fe1-8417-11357e8c79b4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "htw_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "htw-srv01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/networkInterfaces/htw-srv01-nic",
            "internal_domain_name_suffix": "5itvs01dxljuvittwkpibq1ope.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/publicIPAddresses/htw-srv01-ip",
                "subnet_id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01/subnets/htw_subnet01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "htw-srv01-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "htw_RG01",
            "tags": {
              "environment": "dev",
              "project": "htw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.htw_ip",
            "azurerm_resource_group.htw_RG",
            "azurerm_subnet.htw_subnet",
            "azurerm_virtual_network.htw_vnet"
          ]
        },
        {
          "index_key": "htw-srv02",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/networkInterfaces/htw-srv02-nic",
            "internal_domain_name_suffix": "5itvs01dxljuvittwkpibq1ope.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/publicIPAddresses/htw-srv02-ip",
                "subnet_id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01/subnets/htw_subnet01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "htw-srv02-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "htw_RG01",
            "tags": {
              "environment": "dev",
              "project": "htw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.htw_ip",
            "azurerm_resource_group.htw_RG",
            "azurerm_subnet.htw_subnet",
            "azurerm_virtual_network.htw_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "htw_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/networkSecurityGroups/htw_nsg01",
            "location": "westeurope",
            "name": "htw_nsg01",
            "resource_group_name": "htw_RG01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "htw"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.htw_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/networkSecurityGroups/htw_nsg01/securityRules/Allow-RDP",
            "name": "Allow-RDP",
            "network_security_group_name": "htw_nsg01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "htw_RG01",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.htw_nsg",
            "azurerm_resource_group.htw_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "htw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "htw-srv01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/publicIPAddresses/htw-srv01-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.249.61",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "htw-srv01-ip",
            "resource_group_name": "htw_RG01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "htw"
            },
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.htw_RG"
          ]
        },
        {
          "index_key": "htw-srv02",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/publicIPAddresses/htw-srv02-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.211.202",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "htw-srv02-ip",
            "resource_group_name": "htw_RG01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "htw"
            },
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.htw_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "htw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01/subnets/htw_subnet01",
            "name": "htw_subnet01",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "htw_RG01",
            "virtual_network_name": "htw_vnet01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.htw_RG",
            "azurerm_virtual_network.htw_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "htw_SGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01/subnets/htw_subnet01",
            "network_security_group_id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/networkSecurityGroups/htw_nsg01",
            "subnet_id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01/subnets/htw_subnet01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.htw_nsg",
            "azurerm_resource_group.htw_RG",
            "azurerm_subnet.htw_subnet",
            "azurerm_virtual_network.htw_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "htw_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6b5927fa-ba63-4ad3-a273-b29e80c36e7c",
            "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01",
            "location": "westeurope",
            "name": "htw_vnet01",
            "resource_group_name": "htw_RG01",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/virtualNetworks/htw_vnet01/subnets/htw_subnet01",
                "name": "htw_subnet01",
                "security_group": "/subscriptions/ebfda803-71d8-4143-8888-0c70f5d0c5e2/resourceGroups/htw_RG01/providers/Microsoft.Network/networkSecurityGroups/htw_nsg01"
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "htw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.htw_RG"
          ]
        }
      ]
    }
  ]
}